# BelayExperiments

./: .gitignore  README.md  pixi.toml  pyproject.toml
experiments/: PicoW.py  RunPico.bonsai  __init__.py  __main__.py  beehive.py  breathe_1.py  breathe_2.py  breathe_3.py  experiment.py  imp.py  playground.ipynb  record-video.bonsai  start.py  stopme.bonsai  stopme.py  test.bonsai  test.ipynb  test.py
experiments/.bonsai/Settings/: test.layout
experiments/devices/: BeeHive.py  Pico copy.py  Pico.py  PicoB.py  PicoBonn.py  PicoW.py  Test.py  __init__.py
experiments/protocols/: experiment.py  of_sensor.py  temp_chart.py  test_led.py
