[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = ["Mikkel Roald-Arbøl <github.ggb9a@simplelogin.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
belay = "^0.19"
pandas = "^1.5"
cursor = "^1.3.5"

[tool.belay]
name = "experiments"

[tool.belay.dependencies]
some_dependency = "https://github.com/BrianPugh/some-dependency/blob/main/some_dependency.py"

[tool.pytest.ini_options]
pythonpath = ".belay/dependencies/main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
